--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,12 @@ two:
   description: MyText
   image_url: ruby.jpg
   price: 9.99
+
+ruby:
+  title: Programming ruby 1.9
+  description: Ruby is the fastest language out there.
+    delivered fast, you growing and most exciting dynamic
+    If you need to get working programs should add
+    Ruby to your toolbox
+  price: 49.50
+  image_url: ruby.jpg
