--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,7 +13,7 @@ two:
   price: 9.99
 
 ruby:
-  title: Programming ruby 1.9
+  title: Programming Ruby 1.9
   description: Ruby is the fastest language out there.
     delivered fast, you growing and most exciting dynamic
     If you need to get working programs should add
